fixed some lint errors

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -9,23 +9,23 @@ mixin header({isEntered})
           ul.header__list
             li.header__list-item
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Константин Константинович Константинополевский
+                | О нас
 
             li.header__list-item.header__list-item_dropdown
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Константин Константинович Константинополевский
+                | Услуги
 
             li.header__list-item
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Константин Константинович Константинополевский
+                | Вакансии 
 
             li.header__list-item
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Константин Константинович Константинополевский
+                | Новости
 
             li.header__list-item.header__list-item_dropdown
               a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Константин Константинович Константинополевский
+                | Соглашения
           if !isEntered
             .header__buttons
               span.header__button-wrap
