--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -1,5 +1,5 @@
 mixin card-room(images,roomDetails)
-  .card-room
+  .card-room.js-card-room
     .card-room__slider
       .swiper-container.js-swiper-container.card-room__swiper-container
         .swiper-pagination.card-room__pagination
@@ -8,7 +8,7 @@ mixin card-room(images,roomDetails)
         .swiper-wrapper
           each val, index in images
             .swiper-slide.card-room__slide
-              img(src=require("./images/" + val.src ).default alt="фотография конматы").card-room__slider-img
+              img(src=require("./images/" + val.src ).default alt="фотография комнаты").card-room__slider-img
     .card-room__content
       .card-room__head
         span.card-room__number
@@ -24,6 +24,6 @@ mixin card-room(images,roomDetails)
       .card-room__bottom
         +rate-buttons({rate: roomDetails.rate})
         .card-room__reviews
-          span.card-room__reviews-num
+          span.card-room__reviews-num.js-card-room__reviews-num
             | #{roomDetails.reviews} 
-          | Отзывов
+          span.js-card-room__reviews-text| Отзывов
