--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -22,6 +22,10 @@
       #{$self}__button-prev {
         opacity: 1;
       }
+
+      .swiper-button-disabled {
+        opacity: 0.35;
+      }
     }
   }
 
@@ -63,7 +67,9 @@
       height: 100%;
       opacity: 0;
       content: '';
-      box-shadow: -50px 0 50px 23px rgba(0, 0, 0, 0.5) inset, 50px 0 50px 23px rgba(0, 0, 0, 0.5) inset;
+      box-shadow:
+        -50px 0 50px 23px rgba(0, 0, 0, 0.25) inset,
+        50px 0 50px 23px rgba(0, 0, 0, 0.25) inset;
       transition: $tr-fast;
     }
   }
@@ -72,10 +78,12 @@
     display: block;
   }
 
-  &__button-prev,
-  &__button-next {
+  #{$self}__button-prev,
+  #{$self}__button-next {
     top: 22px;
     height: 100%;
+    opacity: 0;
+    cursor: pointer;
 
     &::after {
       font-size: 12px;
