--- a/src/components/dropdown-choose/dropdown-choose.scss
+++ b/src/components/dropdown-choose/dropdown-choose.scss
@@ -37,8 +37,10 @@
   &__upper-field {
     position: relative;
     padding: 12px 15px;
+    overflow: hidden;
     font-family: $font-family-primary;
     line-height: 18px;
+    text-overflow: ellipsis;
     color: $text-color-brightness-75;
     background-color: #fff;
     border-radius: 4px;
