--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -19,8 +19,11 @@
 
 .pagination-wrap__text {
   margin: 0 auto;
+  display: inline-block;
+  overflow: hidden;
   max-width: 320px;
   font-size: 14px;
+  text-overflow: ellipsis;
   color: $text-color-brightness-75;
 
   @media (max-width: $phone-width) {
