--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -9,9 +9,13 @@
   }
 
   &__values {
-    font-size: 12px;
-    color: $text-color-brightness-50;
+    overflow: hidden;
     min-width: 102px;
+    max-width: 50%;
+    font-size: 12px;
+    text-overflow: ellipsis;
+    color: $text-color-brightness-50;
+
     @media (max-width: $phone-width) {
       font-size: 10px;
     }
