--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -65,4 +65,4 @@ mixin card-book(details)
               | 0
               span.card-book__rub
                 | ₽
-        button.button.button_big Забронировать
+        button.button.button_big.button_with-icon Забронировать
