--- a/src/main.scss
+++ b/src/main.scss
@@ -1,53 +1,8 @@
-@import './utils/utils-scss/vars.scss';
-@import './utils/utils-scss/button.scss';
-@import './utils/utils-scss/reset.scss';
-@import './utils/utils-scss/fonts.scss';
-
-// Modules
-@import '~/ion-rangeslider/css/ion.rangeSlider.css';
-@import '~/swiper/swiper-bundle.min.css';
-@import '~/air-datepicker/dist/css/datepicker.min.css';
-@import './pages//index/index';
-@import './components/svg-icons/svg-icons';
-@import './components/validate-error/validate-error';
-@import './components/stop-scrolling/stop-scrolling';
-@import './components/logo/logo';
-@import './pages/form-elements/form-elements';
-@import './components/block-title/block-title';
-@import './components/textField/textField';
-@import './components/masked-textfield/masked-textfield';
-@import './components/dropdown-choose/dropdown-choose';
-@import './components/date-dropdown/date-dropdown';
-@import './components/datepicker/datepicker';
-@import './components/filter-date/filter-date';
-@import './components/subscription/subscription';
-@import './components/expand-list/expand-list';
-@import './components/checkbox-buttons/checkbox-buttons';
-@import './components/radio-buttons/radio-buttons';
-@import './components/toggle-buttons/toggle-buttons';
-@import './components/like-button/like-button';
-@import './components/rate-buttons/rate-buttons';
-@import './components/range-slider/range-slider';
-@import './components/pagination/pagination';
-@import './components/rich-list/rich-list';
-@import './components/bullet-list/bullet-list';
-@import './components/advantages/advantages';
-@import './components/review/review';
-@import './pages/cards-page/cards-page';
-@import './components/card-selection/card-selection';
-@import './components/card-book/card-book';
-@import './components/card-check-in/card-check-in';
-@import './components/card-sign-in/card-sign-in';
-@import './components/card-room/card-room';
-@import './pages/headers-&-footers/headrs&footers-page';
-@import './components/header/header';
-@import './components/footer/footer';
-@import './pages/landing-page/landing-page';
-@import './pages/registration-page/registration-page';
-@import './pages/sign-in-page/sign-in-page';
-@import './pages/filter-page/filter-page';
-@import './pages/room-details/room-details';
-@import './components/circle-diagram/circle-diagram';
+@import '~utils/utils-scss/vars.scss';
+@import '~utils/utils-scss/reset.scss';
+@import '~utils/utils-scss/fonts.scss';
+@import '~components/header/header';
+@import '~components/footer/footer';
 
 html {
   height: 100%;
