--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,3 +1,8 @@
+@import '~utils/utils-scss/vars.scss';
+@import '~utils/utils-scss/reset.scss';
+@import '~utils/utils-scss/fonts.scss';
+@import '~src/main.scss';
+
 .index {
   &__list {
     margin-top: 20px;
