--- a/src/pages/main.pug
+++ b/src/pages/main.pug
@@ -1,12 +1,11 @@
 include ../components/svg-icons/svg-icons
 
 doctype html
-html(lang="en")
+html(lang="ru")
   head
     meta(charset="utf-8")
     title toxin
-    meta(name="keywords" content="Отель, забронировать комнату")
-    meta(name="description", content="frontend lessons")
+    meta(name="description", content="Отель, поиск номеров")
     meta(name="keywords" content="отель, бронирование, комнаты, отдых")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     block head
@@ -17,4 +16,4 @@ html(lang="en")
 
   +svg-icons()
 
-    block script
+block script
