--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -18,16 +18,38 @@ block head
   link(rel="manifest" href="assets/favicons/site.webmanifest")
   
 block content
-  +header({isEntered: false})
+  +header({routes: [
+            {
+              text: 'О нас',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Услуги',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+            {
+              text: 'Вакансии',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Новости',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Соглашения',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+          ],isEntered: false})
   .content
     .registration-page
       .container
         main.registration-page__main
           +card-check-in()
   +footer()
-
-
-
-
-block script
-  script
