--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -16,16 +16,38 @@ block head
   link(rel="manifest" href="assets/favicons/site.webmanifest")
 
 block content
-  +header({isEntered: false})
+  +header({routes: [
+            {
+              text: 'О нас',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Услуги',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+            {
+              text: 'Вакансии',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Новости',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Соглашения',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+          ],isEntered: false})
   .content
     .sign-in-page
       .container
         main.sign-in-page__main
           +card-sing-in()
   +footer()
-
-
-
-
-block script
-  script
