--- a/src/components/card-selection/card-selection.pug
+++ b/src/components/card-selection/card-selection.pug
@@ -6,7 +6,7 @@ mixin card-selection()
           legend.card-selection__form-legend
             h1.card-selection__title 
               | Найдем номера под ваши пожелания
-          .card-selection__block.card-selection__block_margin-b-15
+          .card-selection__block.card-selection__block_margin-b-20
             +date-dropdown({
               classNameFirstInput: "js-date-masked js-date-dropdown__input", 
               classNameSecondInput: "js-date-masked",
@@ -17,5 +17,5 @@ mixin card-selection()
             h4.block-title
               | Гости
             +dropdown-choose({className: "js-dropdown-guests", title:"Гости"})
-          button.button.button_big
+          button.button.button_big.button_with-icon
             | подобрать номер 
