--- a/src/components/card-sign-in/card-sign-in.pug
+++ b/src/components/card-sign-in/card-sign-in.pug
@@ -24,7 +24,7 @@ mixin card-sing-in()
             }
           )
         .card-sing-in__item.card-sing-in__item_margin-b-32
-          button.button.button_big Войти
+          button.button.button_big.button_with-icon Войти
         .card-sing-in__check-in 
           span.card-sing-in__check-in-text
             | Нет аккаунта на Toxin?
