--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -2,11 +2,13 @@ mixin date-dropdown({classNameFirstInput, classNameSecondInput, title, titleSeco
   .date-dropdown
     label.date-dropdown__label
       span.block-title #{title}
-      input(type="text" placeholder="ДД.ММ.ГГГГ" class=`${classNameFirstInput} js-inputDisabled` ).date-dropdown__input
-      svg.date-dropdown__arrow
-        use(xlink:href="#expand-more")
+      span.date-dropdown__input-wrap
+        input(type="text" placeholder="ДД.ММ.ГГГГ" class=`${classNameFirstInput} js-inputDisabled` ).date-dropdown__input
+        svg.date-dropdown__arrow
+          use(xlink:href="#expand-more")
     label.date-dropdown__label
       span.block-title #{titleSecond}
-      input(type="text" placeholder="ДД.ММ.ГГГГ" class=`${classNameSecondInput} js-inputDisabled` ).date-dropdown__input
-      svg.date-dropdown__arrow
-        use(xlink:href="#expand-more")
+      span.date-dropdown__input-wrap
+        input(type="text" placeholder="ДД.ММ.ГГГГ" class=`${classNameSecondInput} js-inputDisabled` ).date-dropdown__input
+        svg.date-dropdown__arrow
+          use(xlink:href="#expand-more")
