--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -6,13 +6,13 @@ mixin footer()
           a(href="index.html")
             svg.footer__logo.logo.logo_colored
               use(xlink:href="#logo-colored")
-          p.footer__achivement
+          p.footer__achievement
             | Бронирование номеров в лучшем
             | отеле 2019 года по версии
             | ассоциации «Отельные взгляды»
         nav.footer__nav
           ul.footer__list
-            span.block-title.footer__list-title
+            span.footer__list-title
                 | Навигация
             li.footer__list-item
               a.footer__link(href="/mock-address/change-me")
@@ -27,7 +27,7 @@ mixin footer()
               a.footer__link(href="/mock-address/change-me")
                 | Услуги
           ul.footer__list
-            span.block-title.footer__list-title
+            span.footer__list-title
                   | О нас
             li.footer__list-item
               a.footer__link(href="/mock-address/change-me")
@@ -42,7 +42,7 @@ mixin footer()
               a.footer__link(href="/mock-address/change-me")
                 | Инвесторы    
           ul.footer__list
-            span.block-title.footer__list-title
+            span.footer__list-title
               | Служба поддержки
             li.footer__list-item
               a.footer__link(href="/mock-address/change-me")
@@ -54,12 +54,13 @@ mixin footer()
               a.footer__link(href="/mock-address/change-me")
                 | Связь с нами 
         .footer__subscribe
-          span.block-title.footer__subscribe-title
+          span.footer__subscribe-title
             | Подписка
           p.footer__subscribe-text
             | Получайте специальные 
             | предложения и новости сервиса
-          +subscription({title: "", placeholder: "Email", required: true})
+          .footer__form-wrap
+            +subscription({title: "", placeholder: "Email", required: true})
     .footer__basement
       .container
         .footer__basement-content
