--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,31 +1,16 @@
-mixin header({isEntered})
+mixin header({routes, isEntered})
   header.header.js-header
     .container
       .header__content
         a(href="index.html").header__logo-link
           svg(class="logo logo_colored header__logo" aria-label="toxin logo")
             use(xlink:href="#logo-colored")
-        nav.header__nav
+        nav.header__nav.js-header__nav
           ul.header__list
-            li.header__list-item
-              a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | О нас
-
-            li.header__list-item.header__list-item_dropdown
-              a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Услуги
-
-            li.header__list-item
-              a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Вакансии 
-
-            li.header__list-item
-              a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Новости
-
-            li.header__list-item.header__list-item_dropdown
-              a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-                | Соглашения
+            each route in routes
+              li.header__list-item
+                a.header__link(href="/mock-address/change-me" class=`${route.active ? 'header__link_active' : null} ${route.dropdown ? 'header__link_droppable' : null}`)
+                  | #{route.text}
           if !isEntered
             .header__buttons
               span.header__button-wrap
@@ -36,38 +21,6 @@ mixin header({isEntered})
           else 
             a(href="/mock-address/change-me").header__cabinet
               | Юлий Цезарь
+        .header__nav-shadow.js-header__nav-shadow
         .header__burger.js-header__burger(role="navigation" aria-label="menu")
           .header__burger-layout.js-header__burger-layout  
-    
-    .header__nav-shadow.js-header__nav-shadow
-    nav.header__nav.header__nav_dropdown.js-header__nav_dropdown
-        ul.header__list
-          li.header__list-item
-            a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-              | О нас
-
-          li.header__list-item.header__list-item_dropdown
-            a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-              | Услуги
-
-          li.header__list-item
-            a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-              | Вакансии
-
-          li.header__list-item
-            a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-              | Новости
-
-          li.header__list-item.header__list-item_dropdown
-            a.header__link(href="/mock-address/change-me" aria-label="информация о нас")
-              | Соглашения
-        if !isEntered
-          span.header__button-wrap
-            a(href="sign-in-page.html").button.button_white.button_small
-              | Войти
-          br
-          a(href="registration-page.html").button.button_small
-            | Зарегистрироваться
-        else 
-          a(href="/mock-address/change-me").header__cabinet
-            | Юлий Цезарь
