--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -1,7 +1,7 @@
 mixin like-button({className, count})
   button.like-button.js-like-button(class=className)
     svg.like-button__like.js-like-button__like
-      use(xlink:href="#like-noactive")
+      use(xlink:href="#like-not-active")
     svg.like-button__like-favorite.js-like-button__like-favorite
       use(xlink:href="#favorite")
     span.like-button__likes.js-like-button__likes #{count}
