--- a/src/components/like-button/like-button.scss
+++ b/src/components/like-button/like-button.scss
@@ -1,11 +1,10 @@
 .like-button {
   position: relative;
-  display: flex;
+  display: inline-flex;
+  flex-wrap: wrap;
   width: 38px;
-  min-width: 38px;
-  height: 18px;
-  min-height: 18px;
-  justify-content: space-between;
+  max-width: 38px;
+  justify-content: flex-end;
   align-items: center;
   font-family: $font-family-primary;
   background-color: #fff;
@@ -13,41 +12,33 @@
   transition: $tr-fast;
   cursor: pointer;
   user-select: none;
-
-  &::after {
-    position: absolute;
-    z-index: -1;
-    left: -1px;
-    display: block;
-    min-width: 40px;
-    min-height: 20px;
-    content: '';
-    background-color: $text-color-brightness-25;
-    border-radius: 12px;
-    transition: $tr-fast;
-  }
+  border: 1px solid $text-color-brightness-25;
+  padding: 0 5px 0 7px;
 
   &__like {
-    position: absolute;
-    left: 4px;
     width: 10px;
     height: 10px;
+    left: 5px;
     transition: $tr-fast;
+    position: absolute;
   }
 
   &__like-favorite {
     position: absolute;
-    left: 4px;
+    left: 0;
     width: 10px;
     height: 10px;
     opacity: 0;
     transition: $tr-fast;
+    left: 5px;
   }
 
   &__likes {
-    position: absolute;
-    right: 9px;
+    display: inline-block;
+    max-width: 70%;
     font-size: 12px;
+    overflow-wrap: break-word;
+    line-height: normal;
     color: $text-color-brightness-25;
     transition: $tr-fast;
   }
