--- a/src/pages/filter/filter.pug
+++ b/src/pages/filter/filter.pug
@@ -22,7 +22,35 @@ block head
   link(rel="manifest" href="assets/favicons/site.webmanifest")
 
 block content
-  +header({isEntered: false})
+  +header({routes: [
+            {
+              text: 'О нас',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Услуги',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+            {
+              text: 'Вакансии',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Новости',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Соглашения',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+          ],isEntered: false})
   .content
     .filter-page
       main.filter-page__main
