--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -14,7 +14,35 @@ block head
   link(rel="manifest" href="assets/favicons/site.webmanifest")
 
 block content
-  +header({isEntered: false})
+  +header({routes: [
+            {
+              text: 'О нас',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Услуги',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+            {
+              text: 'Вакансии',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Новости',
+              active: false,
+              href: '/mock-address/change-me'
+            },
+            {
+              text: 'Соглашения',
+              active: false,
+              href: '/mock-address/change-me',
+              dropdown: true
+            },
+          ],isEntered: false})
   .content
     .landing-page
       .container
@@ -26,8 +54,3 @@ block content
           | отдыха и просто вдохновения
   +footer()
 
-
-
-
-block script
-  script
