--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -59,14 +59,14 @@
   }
 
   &__title {
+    display: inline-block;
     margin-bottom: 20px;
     max-width: 340px;
     font-size: 19px;
     line-height: 23px;
-    white-space: pre-line;
-    text-transform: initial;
-    text-overflow: ellipsis;
-
+    overflow-wrap: break-word;
+    margin-bottom: 20px;
+    font-weight: bold;
     &_margin-l-20 {
       margin-left: 20px;
     }
