--- a/src/utils/utils-scss/fonts.scss
+++ b/src/utils/utils-scss/fonts.scss
@@ -1,13 +1,14 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url('./assets/fonts/montserrat/montserrat-regular.woff2'), url('./assets/fonts/montserrat/montserrat-regular.woff');
+  src: url('~fonts/montserrat/montserrat-regular.woff2'),
+    url('~fonts/montserrat/montserrat-regular.woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('./assets/fonts/montserrat/montserrat-bold.woff2'), url('./assets/fonts/montserrat/montserrat-bold.woff');
+  src: url('~fonts/montserrat/montserrat-bold.woff2'), url('~fonts/montserrat/montserrat-bold.woff');
   font-weight: $bold;
   font-style: normal;
 }
